--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "numeralize-ru",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0",
   "description": "Russian numerals",
   "type": "module",
   "exports": {
